# codex_test

./: README.md  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
